--- a/src/Fimak/SiteBundle/Resources/views/Article/sidebar.html.twig
+++ b/src/Fimak/SiteBundle/Resources/views/Article/sidebar.html.twig
@@ -22,7 +22,7 @@
                     <a href="{{ path('fimak_site_article_view', { 'id': comment.article.id }) }}#comment-{{ comment.id }}">
                         {{ comment.article.title }}
                     </a>
-                    [<em><time datetime="{{ comment.created|date('c') }}">{{ comment.created|date('Y-m-d h:iA') }}</time></em>]
+                    [<em><time datetime="{{ comment.created|date('c') }}">{{ comment.created|created_ago }}</time></em>]
                 </p>
             </header>
             <p>{{ comment.comment }}</p>
