--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -31,8 +31,8 @@
         </div>
 
         <hgroup>
-            <h2>{% block blog_title %}<a href="#">Portfolio</a>{% endblock %}</h2>
-            <h3>{% block blog_tagline %}<a href="#">My portfolio in Symfony2</a>{% endblock %}</h3>
+            <h2>{% block blog_title %}<a href="{{ path('fimak_site_index') }}">Portfolio</a>{% endblock %}</h2>
+            <h3>{% block blog_tagline %}<a href="{{ path('fimak_site_index') }}">My portfolio in Symfony2</a>{% endblock %}</h3>
         </hgroup>
     </header>
 
