--- a/src/Fimak/SiteBundle/Resources/views/Article/index.html.twig
+++ b/src/Fimak/SiteBundle/Resources/views/Article/index.html.twig
@@ -5,16 +5,16 @@
         <article class="article">
             <div class="date"><time datetime="{{ article.created|date('c') }}">{{ article.created|date('l, F j, Y') }}</time></div>
             <header>
-                <h2><a href="{{ path('fimak_site_article_view', { 'id': article.id }) }}">{{ article.title }}</a></h2>
+                <h2><a href="{{ path('fimak_site_article_view', { 'id': article.id, 'slug': article.slug }) }}">{{ article.title }}</a></h2>
             </header>
 
             {# <img src="{{ asset(['images/', article.image]|join) }}" /> #}
             <div class="snippet">
-                <p>{{ article.body(500) }}...<a class="continue" href="{{ path('fimak_site_article_view', { 'id': article.id }) }}">continue reading.</a></p>
+                <p>{{ article.body(500) }}...<a class="continue" href="{{ path('fimak_site_article_view', { 'id': article.id, 'slug': article.slug }) }}">continue reading.</a></p>
             </div>
 
             <footer class="meta">
-                <p>Comments: -</p>
+                <p>Comments: <a href="{{ path('fimak_site_article_view', { 'id': article.id, 'slug': article.slug }) }}#comments">{{ article.comments|length }}</a></p>
                 <p>Posted by <span class="highlight">{{article.author}}</span> at {{ article.created|date('h:iA') }}</p>
                 <p>Tags: <span class="highlight">{{ article.tags }}</span></p>
             </footer>
